# Changelog
This file keeps a record of important changes to the project.

This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## Unreleased - <>

## [v0.9.2] - 2020-06-01
### Changed
- Brush strokes are now detected separately, meaning the undo operation won't
undo everything you have done anymore.
- Fixed issue with rendering the image when moving to the next patch.
- Fix issue with incorrect brush size being drawn.

## [v0.9.1] - 2020-05-27
### Changed
- Loading a new image will now work properly and replace the old image on the
screen.
- Selecting "Save Image" when there is no image loaded no longer causes
problems.  Still not sure why anyone would do this though....
- Can now pan with the right mouse button, even when using the brush tools.

## [v0.9.0] - 2020-05-25
### Added
- Improved Pan and Zoom Performance
- Auto centering of current patch when moving to the next patch
- Each patch now keeps track of it's own undo history, meaning you can go back
to a patch and undo any operation.
- Improved brush drawing latency.
- Improved UI performance
- Dark Mode

### Changed
- No Root Tool now automatically moves to the next patch
- Flood tools now retain their settings across patches
- Improved accuracy of click locations
- Caps lock no longer affects keyboard shortcuts

## [v0.7.7] - 2020-05-09
### ADDED
- Use windows console to get proper desktop path
- Fix using plus and minus for zooming on windows
- New uninstaller exe for removing program files

## [v0.7.6] - 2020-05-08
### Added
- Build archives now include README, changelog, and are named with version
numbers

## [v0.7.5] - 2020-05-08
### Changed
- No longer need to hold CTRL to pan, simply click and drag at any time!
- Improved windows installer dialog

## [v0.7.4] - 2020-05-07
### Changed
- Remove matplotlib dependency
- Windows installer

## [v0.7.3] - 2020-05-07
### Added 
- Updated keyboard shortcuts dialog to reflect all usable shortcuts